<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:elevation="0dp"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_nickname"
        android:padding="18dp"
        android:selectAllOnFocus="true"
        android:textColor="?attr/textColor"
        android:textColorHint="?attr/lightTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:padding="18dp"
        android:selectAllOnFocus="true"
        android:textColor="?attr/textColor"
        android:textColorHint="?attr/lightTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="18dp"
        android:selectAllOnFocus="true"
        android:textColor="?attr/textColor"
        android:textColorHighlight="?attr/textColor"
        android:textColorHint="?attr/lightTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@id/backToLogin" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/login_btn"
        android:elegantTextHeight="true"
        android:elevation="12dp"
        android:enabled="false"
        android:text="@string/action_sign_up"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="?attr/negativeTextColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.2" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/foregroundColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/abc_vector_test"
        app:title="@string/app_title"
        app:titleTextColor="?attr/negativeTextColor" />

    <Button
        android:id="@+id/backToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/transparent_btn"
        android:elevation="0dp"
        android:padding="4dp"
        android:text="@string/account_exists"
        android:textAllCaps="false"
        android:textColor="?attr/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/successBanner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/foregroundColor"
        android:backgroundTint="?attr/foregroundColor"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="96dp"
            android:layout_height="92dp"
            android:layout_marginTop="56dp"
            android:background="?attr/foregroundColor"
            android:backgroundTint="?attr/foregroundColor"
            android:elevation="0dp"
            android:foregroundTint="?attr/backgroundColor"
            android:src="@drawable/ic_checked"
            android:tint="?attr/backgroundColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_checked" />

        <TextView
            android:id="@+id/textView2"
            style="@style/h2Text"
            android:layout_width="295dp"
            android:layout_height="50dp"
            android:layout_marginTop="48dp"
            android:text="@string/sign_up_success"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView3"
            style="@style/h3Text"
            android:layout_width="318dp"
            android:layout_height="83dp"
            android:layout_marginTop="8dp"
            android:text="@string/verify_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/backFromBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/negative_button"
            android:text="@string/got_it"
            android:textColor="?attr/textColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>