<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.ThemeFragment"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/sync_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/foregroundItemColor"
            android:backgroundTint="?attr/foregroundItemColor"
            android:backgroundTintMode="src_over"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:elevation="4dp"
            android:padding="16dp"
            android:summary="@string/sync_theme_enabled"
            android:text="@string/sync_theme"
            android:textColor="?attr/textColor" />

        <CheckBox
            android:id="@+id/auto_dark_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="36dp"
            android:background="?attr/foregroundItemColor"
            android:backgroundTint="?attr/foregroundItemColor"
            android:backgroundTintMode="src_over"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:elevation="4dp"
            android:padding="16dp"
            android:summary="@string/auto_dark_theme_disabled"
            android:text="@string/auto_dark_theme"
            android:textColor="?attr/textColor" />

        <include
            android:id="@+id/theme1"
            layout = "@layout/theme_select"/>

        <include
            android:id="@+id/theme2"
            layout = "@layout/theme_select"/>

        <include
            android:id="@+id/theme3"
            layout = "@layout/theme_select"/>

        <include
            android:id="@+id/theme4"
            layout = "@layout/theme_select"/>

        <include
            android:id="@+id/theme5"
            layout = "@layout/theme_select"/>

        <include
            android:id="@+id/theme6"
            layout = "@layout/theme_select"/>

    </LinearLayout>

</ScrollView>